refactor:调整场景枚举结构，新增智能文档模块并优化文档阅读模块